# masspcf

./: .clang-format  .clang-tidy  .clangd  .codacy.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AI_GUIDE.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README  README.md  RIPSERPP_INTEGRATION_PLAN.md  collect_sources.bat  collect_sources.py  collect_sources.sh  copydbg  copypy  copypy.bat  coverage-history.json  coverage.apply_functional.h.97963b2b8c79857d4133ca7487115465.html  coverage.barcode.h.6bb93f981bd0b48eba9c68d5e28ce4c4.html  coverage.compute_persistence.h.03b1e6ee58d0d8a601a240e8c32f1bee.html  coverage.config.h.018a54bbd56598ee2d861fa83d8d867b.html  coverage.executor.cpp.a6d510995d77a78a69d7df1c2c00174e.html  coverage.executor.h.f3bc427c696b624df7f127a418d4ea9d.html  coverage.functions.html  coverage.html  coverage.io.h.9bbc7f885dd99fdcb7b14084f474dd70.html  coverage.io_stream.h.ee616c17c6eb558bb536ac636b357403.html  coverage.io_stream_base.h.99c71a145572e186075ff7da77cc1382.html  coverage.iterate_rectangles.h.66df2da0cd4a269a45862cfeee151dcc.html  coverage.matrix_integrate.h.f437f4f3d34aced68f692d003cefdf9d.html  (+55 more)
.github/ci/: index.template.html  style.css
.github/scripts/: compare_wheels.py  generate_badges.py  generate_coverage_index.py  llvm_cov_summary.py  merge_cuda_wheels.py
.github/self-hosted-runner/: Dockerfile  README.md  build.sh  entrypoint.sh  requirements.txt  run.sh  setup-host.sh  start.sh  stop.sh
.github/workflows/: analysis-github.yaml  analysis.yaml  analysis.yml  pubilish-pypitest.yaml  pubilish-pypitest.yml  publish-pypi.yaml  publish-pypitest.yaml  sdist.yaml  test.yaml  test.yml  tests.yaml  wheels-tiny.yaml  wheels.yaml
3rd/cuda/: LICENSE
3rd/gcc-runtime/: LICENSE
3rd/ripser/: LICENSE
3rd/splitmix64/: LICENSE
3rd/xoroshiro/: LICENSE
benchmarking/: bench.cpp  bench_reduction.cpp  bench_reduction.h  bench_reduction.hpp  bench_rng.cpp  benchmark.h
benchmarking/python/: bench_parallel_eval.py  cpugpubench  mpcfbench.py
benchmarks/: .gitignore  bench_ph_hybrid.py  profile_real.py  run_multigpu_check.sh
ci/: generate_coverage_index.py  index.template.html  style.css
cmake/: clean_masspcf.cmake
docs/: .gitignore  acknowledgments.rst  api_base.rst  api_persistence.rst  api_point_process.rst  api_sampling.rst  api_sklearn.rst  api_timeseries.rst  arithmetic.rst  concepts.rst  conf.py  distances.rst  evaluation.rst  getting_started.rst  gpu.rst  index.rst  indexing.rst  installing.rst  internals.rst  launch_docs.bat  masspcf.rst  modules.rst  persistence.rst  plotting.rst  point_processes.rst  quickstart.rst  random.rst  references.bib  requirements.txt  sampling.rst  saving.rst  sklearn.rst  tensors.rst  timeseries.rst  ts_creating.rst  ts_embedding.rst  ts_interop.rst  ts_tensor.rst  tutorials.rst  ug_analysis.rst  (+8 more)
docs/_mpcf_cpp/: __init__.py
docs/_static/: gen_combining_fig.py  gen_plotting_gallery.py  gen_sampling_gallery.py  gen_tensor_eval_fig.py  gen_timeseries_fig.py  lightbox.css  lightbox.js
docs/internals/: cuda_engine.rst  deterministic_random.rst  gpu_memory_scheduler.rst  tree_importance_sampling.rst
docs/mpcf_cpp/: __init__.py
docs/tutorial_notebooks/: lorenz_takens_embedding.ipynb  masspcf_intro_mnist_vis.ipynb  motion_classification.ipynb  pytorch_tda_classifier.ipynb  timeseries_classification.ipynb
examples/: arrays.py  average.py  average2.py  compute_homology.py  dist.py  dist_kernel.py  from_serial.py  l1_norm.py  plotpcfs.py  sample_to_sranks.py  view_pdist.py
examples/userguide/: matplotlibrc  userguide.py
gpucov/: pyproject.toml
gpucov/docs/: api.rst  ci.rst  cli.rst  cmake.rst  conf.py  how-it-works.rst  index.rst  quickstart.rst  requirements.txt
gpucov/gpucov/: __init__.py  __main__.py  collector.py  instrumenter.py  runtime.cuh
gpucov/gpucov/cmake/: GPUCovConfig.cmake
gpucov/gpucov/stubs/: cuda_runtime.h
gpucov/tests/: test_cli.py  test_collector.py  test_instrumenter.py
include/: pcf.h  point.h  rectangle.h
include/algorithms/: cuda_matrix_integrate.h  reduce.h
include/mpcf/: algorithm.h  algorithm.hpp  array.h  block_matrix_support.cuh  concepts.h  concepts.hpp  config.h  config.hpp  distance_matrix.h  distance_matrix.hpp  executor.h  executor.hpp  io.h  io.hpp  io_stream.h  math.h  math.hpp  ndarray.h  operations.cuh  pcf.h  (+26 more)
masspcf/: .pcf.py.swp  __init__.py  _cudart_preload.py  _mpcf_cpp.py  _tensor_base.py  array.py  async_task.py  comparison.py  distance.py  distance_matrix.py  gpu.py  inner_product.py  io.py  matrix_computations.py  norms.py  np_support.py  pcf.py  plotting.py  random.py  reductions.py  sample_to_sranks.py  sampling.py  serialize.py  symmetric_matrix.py  system.py  tensor.py  tensor_create.py  timeseries.py  typing.py
mpcf/: __init__.py  pcf.py  plotting.py
src/: algorithm.h  block_matrix_support.h  cuda_device_array.h  cuda_functional_support.h  cuda_matrix_integrate.cu  cuda_matrix_integrate_structs.h  executor.cpp  executor.cu  io_stream.cpp  job_manager.h  pcf.h  point.h  pypcf_support.h
test/: basic_l1_dist.cpp  basic_l1_dist.cu  block_matrix_support.cpp  block_matrix_support.cu  grind.sh  permutations.cu  print_cpp_classes.py  print_wheel_contents.py  test_algorithms_extended.cpp  test_array.cu  test_array_reduce.cu  test_barcode_and_stable_rank.cpp  test_block_integrate.cu  test_block_matrix_support.cu  test_block_scheduler.cpp  test_cuda_async_memory_resource.cu  test_filter_significant.cpp  test_gpu_memory_scheduler.cu  test_io_readwrite.cpp  test_io_stream.cpp  test_iterate_rectangles.cpp  test_iterate_rectangles.cu  test_iterate_segments.cpp  test_l1_dist.cu  test_norms.cu  test_offset_data_manager.cpp  test_parallel_reduce.cpp  test_pcf_algebra_and_norms.cpp  test_permutations.cu  test_permute_in_place.cu  test_result_writer.cpp  test_simplex_cost_units.cu  test_special_tensors.cpp  test_subdivide.cpp  test_tensor.cpp  test_tensor_broadcast.cpp  test_tensor_io_core.cpp  test_tensor_iteration.cpp  test_tensor_masked.cpp  test_timeseries_io.cpp  (+3 more)
(+11886 files in other folders)
